feat(destination): select destination UI and overview wiring (story 4.5) (#23)
* feat(destination): comment thread on destination proposals (story 4.4)

- New CommentModel + CommentDto.
- DestinationCommentBloc with droppable() on LoadComments and
  sequential() on AddComment, optimistic UI with reconcile/rollback,
  preserves submitError on refresh.
- CommentThreadWidget pinned input + ListView, empty state, inline
  helper text, send button disabled while submitting; controller
  cleared via BlocConsumer listener on submitting->done transition.
- CommentTile shows authorDisplayName + content + relative-aware time
  (HH:mm for today, MMM d HH:mm otherwise).
- Each destination card scopes its own DestinationCommentBloc inside
  DestinationsTab.
- Optimistic display name: TripWorkspacePage forwards the current
  member's display name (from trip.members.where(isMe)) down to each
  per-card bloc, with a "You" fallback only if no isMe member is
  resolvable.
- Unit tests: bloc (load/add/optimistic/rollback/blank/order-on-rapid),
  widget (empty state, send dispatch, blank guard, disabled-while-
  submitting, renders comments), tile (display name + fallback).

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>

* feat(destination): select destination UI and overview wiring (story 4.5)

Adds organizer flow to select a destination: confirmation dialog, SelectDestination
bloc event with droppable transformer, chosen badge on DestinationProposalCard,
VoteInputWidget disabled state with tooltip, FAB/VoteModeSelector hidden when
chosen, and Overview tab summary card wired to the chosen destination name via
a shared DestinationBloc provider hoisted to workspace level.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* ci: remove Docker web build job from Flutter CI

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.7 <noreply@anthropic.com>